--- a/style/style.css
+++ b/style/style.css
@@ -69,7 +69,7 @@
     font-family: "fontello";
     font-style: normal;
     font-weight: normal;
-    speak: none;
+    /* speak: none; */
    
     display: inline-block;
     text-decoration: inherit;
@@ -121,6 +121,8 @@
 body {
     width: 1020px;
     height: 1506px;
+    margin: 0 auto;
+    border: 1px solid #e4e9eb;
 }
 .header{
     background:  #323232;
@@ -189,41 +191,39 @@ body {
     display: inline-flex;
     position: relative;
 }
-.main-line-top-left {
-    height: 1px;
-    width: 410px;
-    margin: 0;
-    top: -2px;
-    left: 30px;
-}
+.main-line-top-left,
 .main-line-top-right {
     height: 1px;
     width: 410px;
     margin: 0;
     top: -2px;
+}
+.main-line-top-left {
+    left: 30px;
+}
+.main-line-top-right {
     left: 165px;
 }
-.line-left-1 {
+.line-left-1,
+.line-right-1,
+.line-left-2,
+.line-right-2 {
     height: 104px;
     width: 1px;
+}
+.line-left-1 {
     left: 99px;
     top: -53px;
 }
 .line-right-1 {
-    height: 104px;
-    width: 1px;
     left: 114px;
     top: -53px;
 }
 .line-left-2 {
-    height: 104px;
-    width: 1px;
     left: 99px;
     top: -163px;
 }
 .line-right-2 {
-    height: 104px;
-    width: 1px;
     left: 115px;
     top: -167px;
 }
@@ -239,15 +239,16 @@ body {
     position: relative;
     float: left;
 }
-.artical-line-1 {
+.artical-line-1,
+.artical-line-2 {
     height: 315px;
     width: 1px;
+}
+.artical-line-1 {
     left: 99px;
     top: 14px;
 }
 .artical-line-2 {
-    height: 315px;
-    width: 1px;
     left: 724px;
     top: -82px
 }
@@ -320,148 +321,55 @@ body {
     overflow: hidden;
     visibility: hidden;
 }
-.hex-layer-2-1 {
+.hex-layer-item {
     width: 100%;
     height: 100%;
-    background: #ccc3;
     transform: rotate(-60deg);
     overflow: hidden;
     visibility: visible;
-    background-image: url("../assets/images/Layer_33@1X.png");
+    background: #ccc3;
     background-repeat: no-repeat;
     background-position: 50%;
+}
+.hex-layer-2-1 {
+    background-image: url("../assets/images/Layer_33@1X.png");
 }
 .hex-layer-2-2 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_31@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-2-3 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_34@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-2-4 {
-    width: 100%;
-    height:  100%;
-    background: #4b2b03;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_35@1X.png");
-    background-repeat: no-repeat;
     background-position: 46% 132%;
 }
 .hex-layer-2-2-1 {
-    width: 100%;
-    height: 100%;
-    background: #323232;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_36@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-2-2-2 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_44@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-2-2-3 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_37@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-2-2-4 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_38@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-2-2-5 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_39@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-3-3-1 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_40@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-3-3-2 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_41@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-3-3-3 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_43@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .hex-layer-3-3-4 {
-    width: 100%;
-    height: 100%;
-    background: #ccc3;
-    transform: rotate(-60deg);
-    overflow: hidden;
-    visibility: visible;
     background-image: url("../assets/images/Layer_42@1X.png");
-    background-repeat: no-repeat;
-    background-position: 50%;
 }
 .article {
     width: 100%;
@@ -615,38 +523,26 @@ fieldset {
     height: 23px;
     word-spacing: 0.1em
 }
-input[type="text"] {
+input{
     font-family: 'Lato-Regular', 'MyriadProRegular', sans-serif;
     width: 566px;
     height: 35px;
     font-size: 9pt;
+    background: #454545;
+    border: 1px solid #323232;
+    padding-left: 14px;
+}
+input[type="text"] {
     margin-top: -7px;
     margin-bottom: 16px;
-    background: #454545;
-    border: 1px solid #323232;
-    padding-left: 14px;
 }
 input[type="email"] {
-    font-family: 'Lato-Regular', 'MyriadProRegular', sans-serif;
-    width: 566px;
-    height: 35px;
-    font-size: 9pt;
     margin-top: -1px;
     margin-bottom: 23px;
-    background: #454545;
-    border: 1px solid #323232;
-    padding-left: 14px;
 }
-
 input[name="subject"] {
-    font-family: 'Lato-Regular', 'MyriadProRegular', sans-serif;
-    width: 566px;
-    height: 35px;
-    font-size: 9pt;
     margin-bottom: 16px;
     padding-left: 14px;
-    background: #454545;
-    border: 1px solid #323232;
 }
 textarea {
     font-family: 'Lato-Regular', 'MyriadProRegular', sans-serif;
@@ -658,7 +554,6 @@ textarea {
     resize: none;
     background: #454545;
     border: 1px solid #323232;
-
 }
 .button-submit {
     display: inline-block;
